FwupdBackend: Set user agent from client

Ensures it include any information fwupd expects/sets,
such as the fwupd version, distro version,
in addition to our package version.

BUG: 486726